Fix header overflow
Changed haeder padding from precentage to px.

--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ body{
     width: 100%;
     min-height: 100vh;
     display: grid;
-    grid-template-columns:1fr 4fr ;
+    grid-template-columns:1fr 4fr;
     grid-template-rows:1fr 5fr;
 }
 
@@ -32,7 +32,7 @@ textarea {
 /* Header section */
 .header{
     background-color: aqua;
-    padding: 10px 4%;
+    padding: 10px 20px;
     grid-column:2;
     display: grid;
     grid-template-columns: auto 1fr auto auto auto;
@@ -70,6 +70,7 @@ textarea {
     font-weight: bold;
 }
 
+/* Profile section */
 .profile-section {
     grid-column: 1/3;
     justify-self: start;
@@ -93,11 +94,15 @@ textarea {
     font-size: 0.8rem;
 }
 
+/* Buttons section */
 .header-buttons {
     grid-column:3/6;
     justify-self: center;
+
 }
 
+.header-buttons button {
+}
 
 
 
